--- a/about.html
+++ b/about.html
@@ -6,95 +6,95 @@
     <link rel ="stylesheet" type="text/css" href="styles/stylesheet.css">
   </head>
   <body>
-<header>
-  <img src="images/archeryAcademy-logo-color.png" alt="Archery Academy Logo with an arrow in a bullseye">
-  <nav>
-    <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a> | <a href="#">Existing Student Portal</a></p>
-  </nav>
-</header>
-<aside>
-  <section>
-    <h2>Straight to the Point Archery</h2>
-      <p>528 Nock Point Ln<br>
-      Tacoma, WA 98412<br>
-      <a href="archery-education@example.com">archery-education@example.com</a><br>
-      (253)555-1010
-      </p>
-  </section>
-  <section>
-    <h2>Upcoming Classes</h2>
-    <ul>
-      <li>Monday<br>
-        4:00 - 5:00 p.m.<br>
-        A101 Basic Archery</li>
-      <li>Tuesday<br>
-        4:00 - 5:00 p.m.<br>
-        A102 Intermediate Archery<br>
-        6:00 - 7:00 p.m.<br>
-        A103 Advanced Archery</li>
-      <li>Wednesday<br>
-        4:00 - 5:00 p.m.<br>
-        A101 Basic Archery</li>
-      <li>Thursday<br>
-        4:00 - 5:00 p.m.<br>
-        A102 Intermediate Archery<br>
-        6:00 - 7:00 p.m.<br>
-        A103 Advanced Archery</li>
-      <li><a href="#">Full Calendar of Events</a></li>
-    </ul>
-  </section>
-  <section>
-    <h2>Announcements</h2>
-    <ul>
-      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel egestas turpis. Vestibulum rhoncus justo quis nulla hendrerit molestie. Etiam consequat nisi at turpis euismod tincidunt. Fusce porta in nisl in tempus. </li>
-      <li>Nullam ultrices bibendum scelerisque. Integer lobortis, orci vitae efficitur elementum, mi nisl pellentesque felis, sed vulputate massa turpis nec risus. Maecenas convallis ligula eget ligula fermentum rutrum. Phasellus quam ante, molestie et nibh at, vulputate congue velit. Vivamus efficitur tortor ut scelerisque commodo. In hendrerit, lorem a gravida porta, sem diam volutpat ligula, id interdum sem lacus et diam. Praesent laoreet, mi eu volutpat egestas, eros ante posuere magna, vel euismod velit diam nec dui.</li>
-      <li>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
-    </ul>
-  </section>
-</aside>
-<article>
-  <h1>About Us</h1>
-  <section>
-    <h2>Our Company</h2>
-    <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
-
-    <p>Straight to the Point Archery is an indoor training facility with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.</p>
-
-    <p>From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport. Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.  Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the youth in our community through the wonderful discipline of archery.</p>
-
-    <p>Straight to the Point Archery has instructors that are qualified level 1 and level 2 instructors and have met the safety requirements of the USA Archery (USAA). We teach in a positive learning environment.  Our instructors also have extensive knowledge of the most advanced archery equipment and all forms of archery from the traditional long bow to the modern compound.  Straight to the Point Archery also has specific instructors for recreational archery, competitive archery and bow hunting.</p>
-
-    <p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.</p>
-
-    <p>Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
-  </section>
-  <section>
-    <h2>Instructors</h2>
-    <div class="container">
-      <div class="box">
-        <img src="images/instructor-bio-image1.png" alt="portrait of man with curly hair">
-        <h4>Derek Jenkins</h4>
-        <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.</p>
-      </div>
-      <div class="box">
-        <img src="images/instructor-bio-image2.png" alt="portrait of woman with glasses">
-        <h4>Amy Smith</h4>
-        <p>Amy truly has a passion for archery. She comes from a long line of hunters, fisherman, and trappers of Canada. Amy  places a strong emphasis on safety and is enthusiastic about teaching. Amy also loves fitness, and  has been a YMCA group exercise and personal trainer for over 18 years.</p>
-      </div>
-      <div class="box">
-        <img src="images/instructor-bio-image4.png" alt="portrait of man with baseball cap">
-        <h4>Nathan Lee</h4>
-        <p>Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
-      </div>
-<footer>
-<h2>Straight to the Point Archery</h2>
-<p>info or quote</p>
-<p>Established 2005</p>
-<ul>Associations
-  <li><a href="#">USAA</a></li>
-  <li><a href="#">WSAA</a></li>
-  <li><a href="#">WSB</a></li>
-  <li><a href="#">NFAA</a></li>
-</footer>
+    <header>
+      <img src="images/archeryAcademy-logo-color.png" alt="Archery Academy Logo with an arrow in a bullseye">
+      <nav>
+        <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a> | <a href="#">Existing Student Portal</a></p>
+      </nav>
+    </header>
+    <aside>
+      <section>
+        <h2>Straight to the Point Archery</h2>
+        <p>528 Nock Point Ln<br>
+          Tacoma, WA 98412<br>
+          <a href="archery-education@example.com">archery-education@example.com</a><br>
+          (253)555-1010
+        </p>
+      </section>
+      <section>
+        <h2>Upcoming Classes</h2>
+        <ul>
+          <li>Monday<br>
+            4:00 - 5:00 p.m.<br>
+            A101 Basic Archery</li>
+            <li>Tuesday<br>
+              4:00 - 5:00 p.m.<br>
+              A102 Intermediate Archery<br>
+              6:00 - 7:00 p.m.<br>
+              A103 Advanced Archery</li>
+            <li>Wednesday<br>
+                4:00 - 5:00 p.m.<br>
+                A101 Basic Archery</li>
+            <li>Thursday<br>
+                  4:00 - 5:00 p.m.<br>
+                  A102 Intermediate Archery<br>
+                  6:00 - 7:00 p.m.<br>
+                  A103 Advanced Archery</li>
+            <li><a href="#">Full Calendar of Events</a></li>
+          </ul>
+      </section>
+      <section>
+        <h2>Announcements</h2>
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel egestas turpis. Vestibulum rhoncus justo quis nulla hendrerit molestie. Etiam consequat nisi at turpis euismod tincidunt. Fusce porta in nisl in tempus. </li>
+          <li>Nullam ultrices bibendum scelerisque. Integer lobortis, orci vitae efficitur elementum, mi nisl pellentesque felis, sed vulputate massa turpis nec risus. Maecenas convallis ligula eget ligula fermentum rutrum. Phasellus quam ante, molestie et nibh at, vulputate congue velit. Vivamus efficitur tortor ut scelerisque commodo. In hendrerit, lorem a gravida porta, sem diam volutpat ligula, id interdum sem lacus et diam. Praesent laoreet, mi eu volutpat egestas, eros ante posuere magna, vel euismod velit diam nec dui.</li>
+          <li>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
+        </ul>
+      </section>
+    </aside>
+    <article>
+      <h1>About Us</h1>
+      <section>
+        <h2>Our Company</h2>
+        <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
+        <p>Straight to the Point Archery is an indoor training facility with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.</p>
+        <p>From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport. Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.  Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the youth in our community through the wonderful discipline of archery.</p>
+        <p>Straight to the Point Archery has instructors that are qualified level 1 and level 2 instructors and have met the safety requirements of the USA Archery (USAA). We teach in a positive learning environment.  Our instructors also have extensive knowledge of the most advanced archery equipment and all forms of archery from the traditional long bow to the modern compound.  Straight to the Point Archery also has specific instructors for recreational archery, competitive archery and bow hunting.</p>
+        <p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.</p>
+        <p>Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
+      </section>
+      <section>
+        <h2>Instructors</h2>
+        <!--<div class="container">
+        <div class="box">-->
+          <img src="images/instructor-bio-image1.png" alt="portrait of man with curly hair">
+          <h4>Derek Jenkins</h4>
+          <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.</p>
+          <!--</div>
+          <div class="box">-->
+          <img src="images/instructor-bio-image2.png" alt="portrait of woman with glasses">
+          <h4>Amy Smith</h4>
+          <p>Amy truly has a passion for archery. She comes from a long line of hunters, fisherman, and trappers of Canada. Amy  places a strong emphasis on safety and is enthusiastic about teaching. Amy also loves fitness, and  has been a YMCA group exercise and personal trainer for over 18 years.</p>
+        <!--</div>
+        <div class="box">-->
+          <img src="images/instructor-bio-image4.png" alt="portrait of man with baseball cap">
+          <h4>Nathan Lee</h4>
+          <p>Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
+        <!--</div>
+        </div>-->
+      </section>
+    </article>
+    <footer>
+      <h2>Straight to the Point Archery</h2>
+      <!-- transparent logo on footer image -->
+      <p>Established 2005</p>
+      <p>Associations</p>
+      <ul>
+        <li><a href="#">USAA</a></li>
+        <li><a href="#">WSAA</a></li>
+        <li><a href="#">WSB</a></li>
+        <li><a href="#">NFAA</a></li>
+      </ul>
+    </footer>
   </body>
-</html>
+  </html>
