--- a/index.html
+++ b/index.html
@@ -56,51 +56,67 @@
   <h1>Services</h1>
   <section>
     <h2>Classes</h2>
-    <div class="container">
-      <div class="box">
-        <h3>Class Name</h3>
-        <p>Class Overview</p>
-        <p>Info and Schedule</p>
-      </div>
-      <div class="box">
-        <h3>Class Name</h3>
-        <p>Class Overview</p>
-        <p>Info and Schedule</p>
-      </div>
-      <div class="box">
-        <h3>Class Name</h3>
-        <p>Class Overview</p>
-        <p>Info and Schedule</p>
-      </div>
-    </div>
+    <!--<div class="container">
+      <div class="box">-->
+        <h3>A101 Basic Archery</h3>
+        <p>A101 is a basic archery course that focuses on beginning archery safety, skills, and drills. Participants learn about archery form, range rules and etiquette. Form training and fun games are introduced in this class.</p>
+        <p>Equipment will be provided with exception of safety kit.<br>
+        		Cost: $120/month<br>
+        		Schedule: Mondays and Wednesdays, 4-5pm<br>
+        		Prerequisite:   Interest in learning about the sport of archery. Minimum age  8 years old or 7 w/ pre-evaluation.</p>
+      <!-- </div>
+      <div class="box"> -->
+        <h3>A102 Intermediate Archery</h3>
+        <p>A102 is an intermediate archery course that focuses on intermediate archery safety, form, and introduces new equipment styles of shooting Recurve and Compound bows. Fun games and form reinforcement techniques are emphasized in this class.</p>
+        <p>Equipment will be provided with exception of safety kit.<br>
+        		Cost: $120/month<br>
+        		Schedule: Tuesdays and Thursdays, 4-5pm<br>
+        		Prerequisite:A101 or recommendation from private lesson instructor. Minimum age  7 years old.</p>
+      <!-- </div>
+      <div class="box"> -->
+        <h3>A103 Advanced Archery</h3>
+        <p>After taking the A101, A102 classes, students are eligible to participate in the A103 class. This class focuses on a continued education towards tournament styles of shooting used by many archery tournament associations from around the world. Along with the tournament lesson, participants receive continued knowledge around their shooting form and advice on personal equipment selections.</p>
+        <p>Equipment will be provided with exception of safety kit.<br>
+        		Cost: $120/month<br>
+        		Schedule: Tuesdays and Thursdays, 5-6pm<br>
+        		Prerequisite:  A101/A102 or equivalent. Minimum age  7 years old.</p>
+      <!--</div>
+    </div>-->
   </section>
   <section>
     <h2>Private Lessons</h2>
-      <div class="container">
-        <div class="box">
-          <h3>Package 1</h3>
-          <p>Class Overview</p>
-        </div>
-        <div class="box">
-          <h3>Package 2</h3>
-          <p>Class Overview</p>
-        </div>
-        <div class="box">
-          <h3>Package 3</h3>
-          <p>Class Overview</p>
-        </div>
-      </div>
+      <!--<div class="container">
+        <div class="box">-->
+          <h3>Single Lesson</h3>
+          <p>1 hour of expert guidance by a USA Archery-certified coach<br>
+      		Price: $50</p>
+        <!-- </div>
+        <div class="box"> -->
+          <h3>3 Lesson Package</h3>
+          <p>3 lessons, 1 hour each of expert guidance by a USA Archery-certified coach<br>
+      		Price: $140</p>
+          <!-- </div>
+          <div class="box"> -->
+          <h3>10 Lesson Package</h3>
+          <p>10 lessons, 1 hour each of expert guidance by a USA Archery-certified coach<br>
+      		Price: $380</p>
+        <!--</div>
+      </div>-->
   </section>
 </article>
 <footer>
 <h2>Straight to the Point Archery</h2>
-<p>info or quote</p>
+<!-- transparent logo on footer image -->
+
+Read more: https://html.com/tags/comment-tag/#ixzz7MjBULIyB
 <p>Established 2005</p>
-<ul>Associations
+<p>Associations</p>
+<ul>
   <li><a href="#">USAA</a></li>
   <li><a href="#">WSAA</a></li>
   <li><a href="#">WSB</a></li>
   <li><a href="#">NFAA</a></li>
+  </ul>
 </footer>
   </body>
 </html>
