added CSS grid and color for header

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <header>
       <img src="images/archeryAcademy-logo-color.png" alt="Archery Academy Logo with an arrow in a bullseye">
       <nav>
-        <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a> | <a href="#">Existing Student Portal</a></p>
+        <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a> | <a href="#" class="portal">Existing Student Portal</a></p>
       </nav>
     </header>
     <aside>
