--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
   </head>
   <body>
 <header>
+  <div class="header-grid">
+  <div class="header1">
   <img src="images/archeryAcademy-logo-color.png" alt="Archery Academy Logo with an arrow in a bullseye">
+  </div>
+  <div class="header2">
   <nav>
-    <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a> | <a href="#">Existing Student Portal</a></p>
+    <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a> | <a href="#" class="portal">Existing Student Portal</a></p>
   </nav>
+  </div>
+  </div>
 </header>
 <aside>
   <section>
