added CSS grid for body and footer on About and Home

--- a/about.html
+++ b/about.html
@@ -7,43 +7,52 @@
   </head>
   <body>
     <header>
+      <div class="header-grid">
+      <div class="header1">
       <img src="images/archeryAcademy-logo-color.png" alt="Archery Academy Logo with an arrow in a bullseye">
+      </div>
+      <div class="header2">
       <nav>
         <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a> | <a href="#" class="portal">Existing Student Portal</a></p>
       </nav>
+      </div>
+      </div>
     </header>
+    <div class="about-grid">
+    <!--right sidebar start-->
+    <div class="aside-about">
     <aside>
-      <section>
+      <section class="info">
         <h2>Straight to the Point Archery</h2>
-        <p>528 Nock Point Ln<br>
+          <p>528 Nock Point Ln<br>
           Tacoma, WA 98412<br>
           <a href="archery-education@example.com">archery-education@example.com</a><br>
           (253)555-1010
-        </p>
+          </p>
       </section>
-      <section>
+      <section class="upcoming">
         <h2>Upcoming Classes</h2>
         <ul>
           <li>Monday<br>
             4:00 - 5:00 p.m.<br>
             A101 Basic Archery</li>
-            <li>Tuesday<br>
-              4:00 - 5:00 p.m.<br>
-              A102 Intermediate Archery<br>
-              6:00 - 7:00 p.m.<br>
-              A103 Advanced Archery</li>
-            <li>Wednesday<br>
-                4:00 - 5:00 p.m.<br>
-                A101 Basic Archery</li>
-            <li>Thursday<br>
-                  4:00 - 5:00 p.m.<br>
-                  A102 Intermediate Archery<br>
-                  6:00 - 7:00 p.m.<br>
-                  A103 Advanced Archery</li>
-            <li><a href="#">Full Calendar of Events</a></li>
-          </ul>
+          <li>Tuesday<br>
+            4:00 - 5:00 p.m.<br>
+            A102 Intermediate Archery<br>
+            6:00 - 7:00 p.m.<br>
+            A103 Advanced Archery</li>
+          <li>Wednesday<br>
+            4:00 - 5:00 p.m.<br>
+            A101 Basic Archery</li>
+          <li>Thursday<br>
+            4:00 - 5:00 p.m.<br>
+            A102 Intermediate Archery<br>
+            6:00 - 7:00 p.m.<br>
+            A103 Advanced Archery</li>
+          <li><a href="#">Full Calendar of Events</a></li>
+        </ul>
       </section>
-      <section>
+      <section class="announcements">
         <h2>Announcements</h2>
         <ul>
           <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel egestas turpis. Vestibulum rhoncus justo quis nulla hendrerit molestie. Etiam consequat nisi at turpis euismod tincidunt. Fusce porta in nisl in tempus. </li>
@@ -52,8 +61,10 @@
         </ul>
       </section>
     </aside>
+    </div>
     <article>
       <h1>About Us</h1>
+      <div class="company">
       <section>
         <h2>Our Company</h2>
         <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
@@ -63,6 +74,7 @@
         <p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.</p>
         <p>Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
       </section>
+      </div>
       <section>
         <h2>Instructors</h2>
         <!--<div class="container">
@@ -84,17 +96,26 @@
         </div>-->
       </section>
     </article>
+    </div>
     <footer>
-      <h2>Straight to the Point Archery</h2>
-      <!-- transparent logo on footer image -->
-      <p>Established 2005</p>
-      <p>Associations</p>
+      <div class="footer-grid">
+      <div class="footer1">
+    <h2>Straight to the Point Archery</h2>
+    <h3>Established 2005</h3>
+      </div>
+      <div class="footer2">
+      <img src="images/archeryAcademy-logo-white.png">
+      </div>
+      <div class="footer3">
+    <p>Associations</p>
       <ul>
         <li><a href="#">USAA</a></li>
         <li><a href="#">WSAA</a></li>
         <li><a href="#">WSB</a></li>
         <li><a href="#">NFAA</a></li>
-      </ul>
+        </ul>
+      </div>
+      </div>
     </footer>
   </body>
   </html>
