--- a/index.html
+++ b/index.html
@@ -18,48 +18,54 @@
   </div>
   </div>
 </header>
-<aside>
-  <section>
-    <h2>Straight to the Point Archery</h2>
-      <p>528 Nock Point Ln<br>
-      Tacoma, WA 98412<br>
-      <a href="archery-education@example.com">archery-education@example.com</a><br>
-      (253)555-1010
-      </p>
-  </section>
-  <section>
-    <h2>Upcoming Classes</h2>
-    <ul>
-      <li>Monday<br>
-        4:00 - 5:00 p.m.<br>
-        A101 Basic Archery</li>
-      <li>Tuesday<br>
-        4:00 - 5:00 p.m.<br>
-        A102 Intermediate Archery<br>
-        6:00 - 7:00 p.m.<br>
-        A103 Advanced Archery</li>
-      <li>Wednesday<br>
-        4:00 - 5:00 p.m.<br>
-        A101 Basic Archery</li>
-      <li>Thursday<br>
-        4:00 - 5:00 p.m.<br>
-        A102 Intermediate Archery<br>
-        6:00 - 7:00 p.m.<br>
-        A103 Advanced Archery</li>
-      <li><a href="#">Full Calendar of Events</a></li>
-    </ul>
-  </section>
-  <section>
-    <h2>Announcements</h2>
-    <ul>
-      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel egestas turpis. Vestibulum rhoncus justo quis nulla hendrerit molestie. Etiam consequat nisi at turpis euismod tincidunt. Fusce porta in nisl in tempus. </li>
-      <li>Nullam ultrices bibendum scelerisque. Integer lobortis, orci vitae efficitur elementum, mi nisl pellentesque felis, sed vulputate massa turpis nec risus. Maecenas convallis ligula eget ligula fermentum rutrum. Phasellus quam ante, molestie et nibh at, vulputate congue velit. Vivamus efficitur tortor ut scelerisque commodo. In hendrerit, lorem a gravida porta, sem diam volutpat ligula, id interdum sem lacus et diam. Praesent laoreet, mi eu volutpat egestas, eros ante posuere magna, vel euismod velit diam nec dui.</li>
-      <li>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
-    </ul>
-  </section>
-</aside>
+<div class="services-grid">
+  <!--right sidebar-->
+  <div class="aside">
+  <aside>
+    <section class="info">
+      <h2>Straight to the Point Archery</h2>
+        <p>528 Nock Point Ln<br>
+        Tacoma, WA 98412<br>
+        <a href="archery-education@example.com">archery-education@example.com</a><br>
+        (253)555-1010
+        </p>
+    </section>
+    <section class="upcoming">
+      <h2>Upcoming Classes</h2>
+      <ul>
+        <li>Monday<br>
+          4:00 - 5:00 p.m.<br>
+          A101 Basic Archery</li>
+        <li>Tuesday<br>
+          4:00 - 5:00 p.m.<br>
+          A102 Intermediate Archery<br>
+          6:00 - 7:00 p.m.<br>
+          A103 Advanced Archery</li>
+        <li>Wednesday<br>
+          4:00 - 5:00 p.m.<br>
+          A101 Basic Archery</li>
+        <li>Thursday<br>
+          4:00 - 5:00 p.m.<br>
+          A102 Intermediate Archery<br>
+          6:00 - 7:00 p.m.<br>
+          A103 Advanced Archery</li>
+        <li><a href="#">Full Calendar of Events</a></li>
+      </ul>
+    </section>
+    <section class="announcements">
+      <h2>Announcements</h2>
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel egestas turpis. Vestibulum rhoncus justo quis nulla hendrerit molestie. Etiam consequat nisi at turpis euismod tincidunt. Fusce porta in nisl in tempus. </li>
+        <li>Nullam ultrices bibendum scelerisque. Integer lobortis, orci vitae efficitur elementum, mi nisl pellentesque felis, sed vulputate massa turpis nec risus. Maecenas convallis ligula eget ligula fermentum rutrum. Phasellus quam ante, molestie et nibh at, vulputate congue velit. Vivamus efficitur tortor ut scelerisque commodo. In hendrerit, lorem a gravida porta, sem diam volutpat ligula, id interdum sem lacus et diam. Praesent laoreet, mi eu volutpat egestas, eros ante posuere magna, vel euismod velit diam nec dui.</li>
+        <li>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
+      </ul>
+    </section>
+  </aside>
+  </div>
+  <!--end right sidebar, begin left body-->
 <article>
   <h1>Services</h1>
+  <div class="services">
   <section>
     <h2>Classes</h2>
     <!--<div class="container">
@@ -89,6 +95,8 @@
       <!--</div>
     </div>-->
   </section>
+  </div>
+  <div class="lessons">
   <section>
     <h2>Private Lessons</h2>
       <!--<div class="container">
@@ -110,17 +118,26 @@
       </div>-->
   </section>
 </article>
+</div>
 <footer>
+  <div class="footer-grid">
+  <div class="footer1">
 <h2>Straight to the Point Archery</h2>
-<!-- transparent logo on footer image -->
-<p>Established 2005</p>
+<h3>Established 2005</h3>
+  </div>
+  <div class="footer2">
+  <img src="images/archeryAcademy-logo-white.png">
+  </div>
+  <div class="footer3">
 <p>Associations</p>
-<ul>
-  <li><a href="#">USAA</a></li>
-  <li><a href="#">WSAA</a></li>
-  <li><a href="#">WSB</a></li>
-  <li><a href="#">NFAA</a></li>
-  </ul>
+  <ul>
+    <li><a href="#">USAA</a></li>
+    <li><a href="#">WSAA</a></li>
+    <li><a href="#">WSB</a></li>
+    <li><a href="#">NFAA</a></li>
+    </ul>
+  </div>
+  </div>
 </footer>
   </body>
 </html>
