added CSS for sidebar

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
       </section>
       <section class="upcoming">
         <h2>Upcoming Classes</h2>
-        <ul>
+        <ul class="schedule">
           <li>Monday<br>
             4:00 - 5:00 p.m.<br>
             A101 Basic Archery</li>
