--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <div class="header1">
   <img src="images/archeryAcademy-logo-color.png" alt="Archery Academy Logo with an arrow in a bullseye">
   </div>
-  <div class="header2">
+    <div class="header2">
   <nav>
-    <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a> | <a href="#" class="portal">Existing Student Portal</a></p>
+    <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a>
+      </div>
+      <br>
+    <div class="header3"><a href="#" class="portal">Existing Student Portal</a></div></p>
   </nav>
-  </div>
   </div>
 </header>
 <div class="services-grid">
@@ -32,7 +34,7 @@
     </section>
     <section class="upcoming">
       <h2>Upcoming Classes</h2>
-      <ul>
+      <ul class="schedule">
         <li>Monday<br>
           4:00 - 5:00 p.m.<br>
           A101 Basic Archery</li>
