added css for about page, fixed colors on index

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <header>
       <div class="header-grid">
       <div class="header1">
-      <img src="images/archeryAcademy-logo-color.png" alt="Archery Academy Logo with an arrow in a bullseye">
+      <img src="images/archeryAcademy-logo-white.png" alt="Archery Academy Logo with an arrow in a bullseye">
       </div>
       <div class="header2">
       <nav>
@@ -19,52 +19,53 @@
       </div>
     </header>
     <div class="about-grid">
-    <!--right sidebar start-->
-    <div class="aside-about">
-    <aside>
-      <section class="info">
-        <h2>Straight to the Point Archery</h2>
-          <p>528 Nock Point Ln<br>
-          Tacoma, WA 98412<br>
-          <a href="archery-education@example.com">archery-education@example.com</a><br>
-          (253)555-1010
-          </p>
-      </section>
-      <section class="upcoming">
-        <h2>Upcoming Classes</h2>
-        <ul class="schedule">
-          <li>Monday<br>
-            4:00 - 5:00 p.m.<br>
-            A101 Basic Archery</li>
-          <li>Tuesday<br>
-            4:00 - 5:00 p.m.<br>
-            A102 Intermediate Archery<br>
-            6:00 - 7:00 p.m.<br>
-            A103 Advanced Archery</li>
-          <li>Wednesday<br>
-            4:00 - 5:00 p.m.<br>
-            A101 Basic Archery</li>
-          <li>Thursday<br>
-            4:00 - 5:00 p.m.<br>
-            A102 Intermediate Archery<br>
-            6:00 - 7:00 p.m.<br>
-            A103 Advanced Archery</li>
-          <li><a href="#">Full Calendar of Events</a></li>
-        </ul>
-      </section>
-      <section class="announcements">
-        <h2>Announcements</h2>
-        <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel egestas turpis. Vestibulum rhoncus justo quis nulla hendrerit molestie. Etiam consequat nisi at turpis euismod tincidunt. Fusce porta in nisl in tempus. </li>
-          <li>Nullam ultrices bibendum scelerisque. Integer lobortis, orci vitae efficitur elementum, mi nisl pellentesque felis, sed vulputate massa turpis nec risus. Maecenas convallis ligula eget ligula fermentum rutrum. Phasellus quam ante, molestie et nibh at, vulputate congue velit. Vivamus efficitur tortor ut scelerisque commodo. In hendrerit, lorem a gravida porta, sem diam volutpat ligula, id interdum sem lacus et diam. Praesent laoreet, mi eu volutpat egestas, eros ante posuere magna, vel euismod velit diam nec dui.</li>
-          <li>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
-        </ul>
-      </section>
-    </aside>
+      <!--right sidebar-->
+      <div class="aside-about">
+      <aside>
+        <section class="info">
+          <h2>Straight to the Point Archery</h2>
+            <p>528 Nock Point Ln<br>
+            Tacoma, WA 98412<br>
+            (253)555-1010<br><br>
+            <a href="archery-education@example.com">archery-education@example.com</a><br>
+            </p>
+        </section>
+        <section class="upcoming">
+          <h2>Upcoming Classes</h2>
+          <ul class="schedule">
+            <li>Monday<br>
+              4:00 - 5:00 p.m.<br>
+              A101 Basic Archery</li>
+            <li>Tuesday<br>
+              4:00 - 5:00 p.m.<br>
+              A102 Intermediate Archery<br>
+              6:00 - 7:00 p.m.<br>
+              A103 Advanced Archery</li>
+            <li>Wednesday<br>
+              4:00 - 5:00 p.m.<br>
+              A101 Basic Archery</li>
+            <li>Thursday<br>
+              4:00 - 5:00 p.m.<br>
+              A102 Intermediate Archery<br>
+              6:00 - 7:00 p.m.<br>
+              A103 Advanced Archery</li>
+            <li><a href="#">Full Calendar of Events</a></li>
+          </ul>
+        </section>
+        <section class="announcements">
+          <h2>Announcements</h2>
+          <ul>
+            <li>3/1/22<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel egestas turpis. Vestibulum rhoncus justo quis nulla hendrerit molestie. Etiam consequat nisi at turpis euismod tincidunt. Fusce porta in nisl in tempus. </li>
+            <li>2/17/22<br>Nullam ultrices bibendum scelerisque. Integer lobortis, orci vitae efficitur elementum, mi nisl pellentesque felis, sed vulputate massa turpis nec risus. Maecenas convallis ligula eget ligula fermentum rutrum. Phasellus quam ante, molestie et nibh at, vulputate congue velit. Vivamus efficitur tortor ut scelerisque commodo. In hendrerit, lorem a gravida porta, sem diam volutpat ligula, id interdum sem lacus et diam. Praesent laoreet, mi eu volutpat egestas, eros ante posuere magna, vel euismod velit diam nec dui.</li>
+            <li>1/15/22<br>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
+            <li>11/22/21<br>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
+          </ul>
+        </section>
+      </aside>
     </div>
+      <!--end right sidebar, begin left body-->
     <article>
-      <h1>About Us</h1>
-      <div class="company">
+    <div class="company">
       <section>
         <h2>Our Company</h2>
         <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
@@ -75,44 +76,46 @@
         <p>Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
       </section>
       </div>
+      <div class="staff-row">
       <section>
         <h2>Instructors</h2>
-        <!--<div class="container">
-        <div class="box">-->
+        <div class="container-staff">
+        <div class="staff">
           <img src="images/instructor-bio-image1.png" alt="portrait of man with curly hair">
           <h4>Derek Jenkins</h4>
           <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.</p>
-          <!--</div>
-          <div class="box">-->
+          </div>
+          <div class="staff">
           <img src="images/instructor-bio-image2.png" alt="portrait of woman with glasses">
           <h4>Amy Smith</h4>
           <p>Amy truly has a passion for archery. She comes from a long line of hunters, fisherman, and trappers of Canada. Amy  places a strong emphasis on safety and is enthusiastic about teaching. Amy also loves fitness, and  has been a YMCA group exercise and personal trainer for over 18 years.</p>
-        <!--</div>
-        <div class="box">-->
+        </div>
+        <div class="staff">
           <img src="images/instructor-bio-image4.png" alt="portrait of man with baseball cap">
           <h4>Nathan Lee</h4>
           <p>Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
-        <!--</div>
-        </div>-->
+        </div>
+        </div>
       </section>
-    </article>
+      </div>
     </div>
+    </article>
     <footer>
       <div class="footer-grid">
       <div class="footer1">
-    <h2>Straight to the Point Archery</h2>
-    <h3>Established 2005</h3>
+      <h2 class="white">Straight to the Point Archery</h2>
+      <h3>Established 2005</h3>
       </div>
       <div class="footer2">
       <img src="images/archeryAcademy-logo-white.png">
       </div>
       <div class="footer3">
-    <p>Associations</p>
+      <p>Associations</p>
       <ul>
-        <li><a href="#">USAA</a></li>
-        <li><a href="#">WSAA</a></li>
-        <li><a href="#">WSB</a></li>
-        <li><a href="#">NFAA</a></li>
+        <li><a href="#" class="white">USAA</a></li>
+        <li><a href="#" class="white">WSAA</a></li>
+        <li><a href="#" class="white">WSB</a></li>
+        <li><a href="#" class="white">NFAA</a></li>
         </ul>
       </div>
       </div>
