--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header>
   <div class="header-grid">
   <div class="header1">
-  <img src="images/archeryAcademy-logo-color.png" alt="Archery Academy Logo with an arrow in a bullseye">
+  <img src="images/archeryAcademy-logo-white.png" alt="Archery Academy Logo with an arrow in a bullseye">
   </div>
     <div class="header2">
   <nav>
@@ -21,6 +21,7 @@
   </div>
 </header>
 <div class="services-grid">
+
   <!--right sidebar-->
   <div class="aside">
   <aside>
@@ -28,8 +29,8 @@
       <h2>Straight to the Point Archery</h2>
         <p>528 Nock Point Ln<br>
         Tacoma, WA 98412<br>
+        (253)555-1010<br><br>
         <a href="archery-education@example.com">archery-education@example.com</a><br>
-        (253)555-1010
         </p>
     </section>
     <section class="upcoming">
@@ -57,86 +58,84 @@
     <section class="announcements">
       <h2>Announcements</h2>
       <ul>
-        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel egestas turpis. Vestibulum rhoncus justo quis nulla hendrerit molestie. Etiam consequat nisi at turpis euismod tincidunt. Fusce porta in nisl in tempus. </li>
-        <li>Nullam ultrices bibendum scelerisque. Integer lobortis, orci vitae efficitur elementum, mi nisl pellentesque felis, sed vulputate massa turpis nec risus. Maecenas convallis ligula eget ligula fermentum rutrum. Phasellus quam ante, molestie et nibh at, vulputate congue velit. Vivamus efficitur tortor ut scelerisque commodo. In hendrerit, lorem a gravida porta, sem diam volutpat ligula, id interdum sem lacus et diam. Praesent laoreet, mi eu volutpat egestas, eros ante posuere magna, vel euismod velit diam nec dui.</li>
-        <li>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
+        <li>3/1/22<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel egestas turpis. Vestibulum rhoncus justo quis nulla hendrerit molestie. Etiam consequat nisi at turpis euismod tincidunt. Fusce porta in nisl in tempus. </li>
+        <li>2/17/22<br>Nullam ultrices bibendum scelerisque. Integer lobortis, orci vitae efficitur elementum, mi nisl pellentesque felis, sed vulputate massa turpis nec risus. Maecenas convallis ligula eget ligula fermentum rutrum. Phasellus quam ante, molestie et nibh at, vulputate congue velit. Vivamus efficitur tortor ut scelerisque commodo. In hendrerit, lorem a gravida porta, sem diam volutpat ligula, id interdum sem lacus et diam. Praesent laoreet, mi eu volutpat egestas, eros ante posuere magna, vel euismod velit diam nec dui.</li>
+        <li>1/15/22<br>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
+        <li>11/22/21<br>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
       </ul>
     </section>
   </aside>
   </div>
   <!--end right sidebar, begin left body-->
+
+<div class="services">
 <article>
-  <h1>Services</h1>
-  <div class="services">
+<!--  <h1>Services</h1>-->
   <section>
     <h2>Classes</h2>
-    <!--<div class="container">
-      <div class="box">-->
+    <div class="container">
+      <div class="box">
         <h3>A101 Basic Archery</h3>
         <p>A101 is a basic archery course that focuses on beginning archery safety, skills, and drills. Participants learn about archery form, range rules and etiquette. Form training and fun games are introduced in this class.</p>
         <p>Equipment will be provided with exception of safety kit.<br>
         		Cost: $120/month<br>
         		Schedule: Mondays and Wednesdays, 4-5pm<br>
         		Prerequisite:   Interest in learning about the sport of archery. Minimum age  8 years old or 7 w/ pre-evaluation.</p>
-      <!-- </div>
-      <div class="box"> -->
+      </div>
+      <div class="box">
         <h3>A102 Intermediate Archery</h3>
         <p>A102 is an intermediate archery course that focuses on intermediate archery safety, form, and introduces new equipment styles of shooting Recurve and Compound bows. Fun games and form reinforcement techniques are emphasized in this class.</p>
         <p>Equipment will be provided with exception of safety kit.<br>
         		Cost: $120/month<br>
         		Schedule: Tuesdays and Thursdays, 4-5pm<br>
         		Prerequisite:A101 or recommendation from private lesson instructor. Minimum age  7 years old.</p>
-      <!-- </div>
-      <div class="box"> -->
+      </div>
+      <div class="box">
         <h3>A103 Advanced Archery</h3>
         <p>After taking the A101, A102 classes, students are eligible to participate in the A103 class. This class focuses on a continued education towards tournament styles of shooting used by many archery tournament associations from around the world. Along with the tournament lesson, participants receive continued knowledge around their shooting form and advice on personal equipment selections.</p>
         <p>Equipment will be provided with exception of safety kit.<br>
         		Cost: $120/month<br>
         		Schedule: Tuesdays and Thursdays, 5-6pm<br>
         		Prerequisite:  A101/A102 or equivalent. Minimum age  7 years old.</p>
-      <!--</div>
-    </div>-->
   </section>
-  </div>
-  <div class="lessons">
   <section>
     <h2>Private Lessons</h2>
-      <!--<div class="container">
-        <div class="box">-->
+    <div class="container">
+      <div class="box">
           <h3>Single Lesson</h3>
           <p>1 hour of expert guidance by a USA Archery-certified coach<br>
       		Price: $50</p>
-        <!-- </div>
-        <div class="box"> -->
+        </div>
+        <div class="box">
           <h3>3 Lesson Package</h3>
           <p>3 lessons, 1 hour each of expert guidance by a USA Archery-certified coach<br>
       		Price: $140</p>
-          <!-- </div>
-          <div class="box"> -->
+          </div>
+          <div class="box">
           <h3>10 Lesson Package</h3>
           <p>10 lessons, 1 hour each of expert guidance by a USA Archery-certified coach<br>
       		Price: $380</p>
-        <!--</div>
-      </div>-->
+        </div>
   </section>
 </article>
+</div>
 </div>
 <footer>
   <div class="footer-grid">
   <div class="footer1">
-<h2>Straight to the Point Archery</h2>
-<h3>Established 2005</h3>
+  <h2 class="white">Straight to the Point Archery</h2>
+  <h5>Established 2005</h5>
   </div>
   <div class="footer2">
   <img src="images/archeryAcademy-logo-white.png">
   </div>
   <div class="footer3">
-<p>Associations</p>
+  <p>Associations</p>
   <ul>
-    <li><a href="#">USAA</a></li>
-    <li><a href="#">WSAA</a></li>
-    <li><a href="#">WSB</a></li>
-    <li><a href="#">NFAA</a></li>
+    <li><a href="#" class="white">USAA</a></li>
+    <li><a href="#" class="white">WSAA</a></li>
+    <li><a href="#" class="white">WSB</a></li>
+    <li><a href="#" class="white">NFAA</a></li>
     </ul>
   </div>
   </div>
