added CSS and fixed all errors on index page

--- a/about.html
+++ b/about.html
@@ -11,11 +11,13 @@
       <div class="header1">
       <img src="images/archeryAcademy-logo-white.png" alt="Archery Academy Logo with an arrow in a bullseye">
       </div>
-      <div class="header2">
+        <div class="header2">
       <nav>
-        <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a> | <a href="#" class="portal">Existing Student Portal</a></p>
+        <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a>
+          </div>
+          <br>
+        <div class="header3"><a href="#" class="portal">Existing Student Portal</a></div></p>
       </nav>
-      </div>
       </div>
     </header>
     <div class="about-grid">
@@ -64,21 +66,23 @@
       </aside>
     </div>
       <!--end right sidebar, begin left body-->
-    <article>
     <div class="company">
-      <section>
-        <h2>Our Company</h2>
+    <article>
+        <div class="container">
+          <div class="box scroll">
+          <h2>Our Company</h2>
         <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
         <p>Straight to the Point Archery is an indoor training facility with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.</p>
         <p>From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport. Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.  Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the youth in our community through the wonderful discipline of archery.</p>
         <p>Straight to the Point Archery has instructors that are qualified level 1 and level 2 instructors and have met the safety requirements of the USA Archery (USAA). We teach in a positive learning environment.  Our instructors also have extensive knowledge of the most advanced archery equipment and all forms of archery from the traditional long bow to the modern compound.  Straight to the Point Archery also has specific instructors for recreational archery, competitive archery and bow hunting.</p>
         <p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.</p>
         <p>Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
-      </section>
       </div>
+      </div>
+
       <div class="staff-row">
       <section>
-        <h2>Instructors</h2>
+        <h2 class="white">Instructors</h2>
         <div class="container-staff">
         <div class="staff">
           <img src="images/instructor-bio-image1.png" alt="portrait of man with curly hair">
@@ -97,26 +101,24 @@
         </div>
         </div>
       </section>
-      </div>
-    </div>
-    </article>
+      </article>
+    </div></div>
+
     <footer>
       <div class="footer-grid">
       <div class="footer1">
-      <h2 class="white">Straight to the Point Archery</h2>
-      <h3>Established 2005</h3>
+        <h2 class="white">Straight to the Point Archery</h2>
+        <h5>Established 2005</h5>
       </div>
       <div class="footer2">
-      <img src="images/archeryAcademy-logo-white.png">
+        <img src="images/archeryAcademy-logo-white.png">
       </div>
       <div class="footer3">
-      <p>Associations</p>
-      <ul>
-        <li><a href="#" class="white">USAA</a></li>
-        <li><a href="#" class="white">WSAA</a></li>
-        <li><a href="#" class="white">WSB</a></li>
-        <li><a href="#" class="white">NFAA</a></li>
-        </ul>
+        <p>Associations<br>
+          <a href="#" class="white">USAA</a> <br>
+          <a href="#" class="white">WSAA</a> <br>
+          <a href="#" class="white">WSB</a> <br>
+          <a href="#" class="white">NFAA</a> <br></p>
       </div>
       </div>
     </footer>
