--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   <div class="header1">
   <img src="images/archeryAcademy-logo-white.png" alt="Archery Academy Logo with an arrow in a bullseye">
   </div>
-    <div class="header2">
+
   <nav>
-    <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a>
-      </div>
-      <br>
-    <div class="header3"><a href="#" class="portal">Existing Student Portal</a></div></p>
+    <div class="header2">
+    <p>
+      <a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a>
+    </p>
+    </div>
+    <br>
+    <div class="header3"><a href="#" class="portal">Existing Student Portal</a></div>
   </nav>
   </div>
 </header>
@@ -64,15 +67,16 @@
         <li>11/22/21<br>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
       </ul>
     </section>
+      <div style="padding:177.78% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/221203063?h=34d4330fe1&loop=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   </aside>
   </div>
   <!--end right sidebar, begin left body-->
 
 <div class="services">
 <article>
-<!--  <h1>Services</h1>-->
+  <h1>Services</h1>
   <section>
-    <h2>Classes</h2>
+    <h2 class="white">Classes</h2>
     <div class="container">
       <div class="box">
         <h3>A101 Basic Archery</h3>
@@ -97,9 +101,11 @@
         		Cost: $120/month<br>
         		Schedule: Tuesdays and Thursdays, 5-6pm<br>
         		Prerequisite:  A101/A102 or equivalent. Minimum age  7 years old.</p>
+        </div>
+      </div>
   </section>
   <section>
-    <h2>Private Lessons</h2>
+    <h2 class="white">Private Lessons</h2>
     <div class="container">
       <div class="box">
           <h3>Single Lesson</h3>
@@ -116,6 +122,7 @@
           <p>10 lessons, 1 hour each of expert guidance by a USA Archery-certified coach<br>
       		Price: $380</p>
         </div>
+      </div>
   </section>
 </article>
 </div>
@@ -123,20 +130,18 @@
 <footer>
   <div class="footer-grid">
   <div class="footer1">
-  <h2 class="white">Straight to the Point Archery</h2>
-  <h5>Established 2005</h5>
+    <h2 class="white">Straight to the Point Archery</h2>
+    <h5>Established 2005</h5>
   </div>
   <div class="footer2">
-  <img src="images/archeryAcademy-logo-white.png">
+    <img src="images/archeryAcademy-logo-white.png" alt="Archery Academy Logo with an arrow in a bullseye">
   </div>
   <div class="footer3">
-  <p>Associations</p>
-  <ul>
-    <li><a href="#" class="white">USAA</a></li>
-    <li><a href="#" class="white">WSAA</a></li>
-    <li><a href="#" class="white">WSB</a></li>
-    <li><a href="#" class="white">NFAA</a></li>
-    </ul>
+    <p>Associations<br>
+      <a href="#" class="white">USAA</a> <br>
+      <a href="#" class="white">WSAA</a> <br>
+      <a href="#" class="white">WSB</a> <br>
+      <a href="#" class="white">NFAA</a> <br></p>
   </div>
   </div>
 </footer>
