fixed errors found from validator on about and stylesheet

--- a/about.html
+++ b/about.html
@@ -11,12 +11,15 @@
       <div class="header1">
       <img src="images/archeryAcademy-logo-white.png" alt="Archery Academy Logo with an arrow in a bullseye">
       </div>
-        <div class="header2">
+
       <nav>
-        <p><a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a>
-          </div>
-          <br>
-        <div class="header3"><a href="#" class="portal">Existing Student Portal</a></div></p>
+        <div class="header2">
+        <p>
+          <a href="index.html">Services</a> | <a href="about.html">About</a> | <a href="#">Calendar</a>
+        </p>
+        </div>
+        <br>
+        <div class="header3"><a href="#" class="portal">Existing Student Portal</a></div>
       </nav>
       </div>
     </header>
@@ -68,9 +71,9 @@
       <!--end right sidebar, begin left body-->
     <div class="company">
     <article>
+      <h2 class="white">Our Company</h2>
         <div class="container">
           <div class="box scroll">
-          <h2>Our Company</h2>
         <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
         <p>Straight to the Point Archery is an indoor training facility with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.</p>
         <p>From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport. Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.  Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the youth in our community through the wonderful discipline of archery.</p>
@@ -101,9 +104,10 @@
         </div>
         </div>
       </section>
-      </article>
-    </div></div>
-
+    </div>
+    </article>
+  </div>
+  </div>
     <footer>
       <div class="footer-grid">
       <div class="footer1">
@@ -111,7 +115,7 @@
         <h5>Established 2005</h5>
       </div>
       <div class="footer2">
-        <img src="images/archeryAcademy-logo-white.png">
+        <img src="images/archeryAcademy-logo-white.png" alt="Archery Academy Logo with an arrow in a bullseye">
       </div>
       <div class="footer3">
         <p>Associations<br>
