--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <link rel ="stylesheet" type="text/css" href="styles/stylesheet.css">
   </head>
   <body>
+    <a href="main-content" class="hidden">Skip to main content</a>
     <header>
       <div class="header-grid">
       <div class="header1">
@@ -23,7 +24,7 @@
       </nav>
       </div>
     </header>
-    <div class="about-grid">
+    <div class="about-grid" id="main-content">
       <!--right sidebar-->
       <div class="aside-about">
       <aside>
@@ -88,17 +89,17 @@
         <h2 class="white">Instructors</h2>
         <div class="container-staff">
           <div class="staff">
-            <img src="images/instructor-bio-image1.png" alt="portrait of man with curly hair">
+            <img src="images/instructor-bio-image1.png" alt="portrait Derek Jenkins, smiling with curly hair">
             <h4>Derek Jenkins</h4>
             <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.</p>
           </div>
           <div class="staff">
-            <img src="images/instructor-bio-image2.png" alt="portrait of woman with glasses" >
+            <img src="images/instructor-bio-image2.png" alt="portrait Amy Smith smiling and wearing glasses" >
             <h4>Amy Smith</h4>
             <p>Amy truly has a passion for archery. She comes from a long line of hunters, fisherman, and trappers of Canada. Amy  places a strong emphasis on safety and is enthusiastic about teaching. Amy also loves fitness, and  has been a YMCA group exercise and personal trainer for over 18 years.</p>
         </div>
         <div class="staff">
-          <img src="images/instructor-bio-image4.png" alt="portrait of man with baseball cap">
+          <img src="images/instructor-bio-image4.png" alt="portrait of Nathan Lee smiling and wearing a  baseball cap">
           <h4>Nathan Lee</h4>
           <p>Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
         </div>
@@ -119,10 +120,11 @@
       </div>
       <div class="footer3">
         <p>Associations<br>
-          <a href="#" class="white">USAA</a> <br>
-          <a href="#" class="white">WSAA</a> <br>
-          <a href="#" class="white">WSB</a> <br>
-          <a href="#" class="white">NFAA</a> <br></p>
+          <span class="sr-only">These 4 Association links will open in a new tab</span>
+          <a href="#" class="white" target="_blank">USAA</a> <br>
+          <a href="#" class="white" target="_blank">WSAA</a> <br>
+          <a href="#" class="white" target="_blank">WSB</a> <br>
+          <a href="#" class="white" target="_blank">NFAA</a> <br></p>
       </div>
       </div>
     </footer>
