--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <title>Straight to the Point Archery</title>
     <link rel ="stylesheet" type="text/css" href="styles/stylesheet.css">
-  </head>
-  <body>
-<header>
-  <div class="header-grid">
-  <div class="header1">
-  <img src="images/archeryAcademy-logo-white.png" alt="Archery Academy Logo with an arrow in a bullseye">
-  </div>
-
+</head>
+<body>
+    <a href="main-content" class="hidden">Skip to main content</a>
+    <header>
+      <div class="header-grid">
+        <div class="header1">
+          <img src="images/archeryAcademy-logo-white.png" alt="Archery Academy Logo with an arrow in a bullseye">
+        </div>
   <nav>
     <div class="header2">
     <p>
@@ -26,7 +26,7 @@
 <div class="services-grid">
 
   <!--right sidebar-->
-  <div class="aside">
+  <div class="aside" id="main-content">
   <aside>
     <section class="info">
       <h2>Straight to the Point Archery</h2>
@@ -67,7 +67,7 @@
         <li>11/22/21<br>Maecenas fringilla justo vitae maximus sagittis. Quisque at finibus ex. Pellentesque libero sapien, pulvinar eget arcu sit amet, sagittis rhoncus ipsum. Suspendisse eget massa pulvinar, aliquet erat eget, pretium massa. Vivamus erat tellus, vehicula eu ligula nec, volutpat laoreet neque.</li>
       </ul>
     </section>
-      <div style="padding:177.78% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/221203063?h=34d4330fe1&loop=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+      <div style="padding:177.78% 0 0 0;position:relative;"> <iframe src="https://player.vimeo.com/video/221203063?h=34d4330fe1&loop=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   </aside>
   </div>
   <!--end right sidebar, begin left body-->
@@ -138,6 +138,7 @@
   </div>
   <div class="footer3">
     <p>Associations<br>
+      <span class="sr-only">These 4 Association links will open in a new tab</span>
       <a href="#" class="white">USAA</a> <br>
       <a href="#" class="white">WSAA</a> <br>
       <a href="#" class="white">WSB</a> <br>
