changed jumping spot for main content

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       </nav>
       </div>
     </header>
-    <div class="about-grid" id="main-content">
+    <div class="about-grid">
       <!--right sidebar-->
       <div class="aside-about">
       <aside>
@@ -70,7 +70,7 @@
       </aside>
     </div>
       <!--end right sidebar, begin left body-->
-    <div class="company">
+    <div class="company" id="main-content">
     <article>
       <h2 class="white">Our Company</h2>
         <div class="container">
