--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="services-grid">
 
   <!--right sidebar-->
-  <div class="aside" id="main-content">
+  <div class="aside">
   <aside>
     <section class="info">
       <h2>Straight to the Point Archery</h2>
@@ -72,7 +72,7 @@
   </div>
   <!--end right sidebar, begin left body-->
 
-<div class="services">
+<div class="services" id="main-content">
 <article>
   <h1>Services</h1>
   <section>
